less/navigation.less
@-webkit-keyframes animate {
  0% {
    opacity: 0;
    -webkit-transform: rotate(45deg) translate(-20px, -20px);
    transform: rotate(45deg) translate(-20px, -20px);
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    -webkit-transform: rotate(45deg) translate(20px, 20px);
    transform: rotate(45deg) translate(20px, 20px);
  }
}

@keyframes animate {
  0% {
    opacity: 0;
    transform: rotate(45deg) translate(-20px, -20px);
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: rotate(45deg) translate(20px, 20px);
  }
}

.nav {
  max-width: 100%;
  height: 100vh;
  margin: 0 auto;
  background: linear-gradient(to bottom, #cc5500, #ff791a);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;

  @media @phone {
    width: 100%;
    margin: 0 auto;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding-top: 3%;
  }
  .nav-text {
    max-width: 50%;
    padding-bottom: 5%;
    font-family: "Source Sans Pro", sans-serif;
    font-size: 2.9rem;
    text-align: center;
    @media @phone {
      font-size: 2.4rem;
      margin-top: 15%;
      margin-bottom: 17%;
      max-width: 90%;
    }
  }

  .nav-title {
    font-family: "Chivo", sans-serif;
    font-style: italic;
    font-size: 8rem;
    margin-top: 10%;
    @media @phone {
      font-size: 4rem;
      width: 100%;
      text-align: center;
    }
  }
  .nav-second-title {
    font-family: "Chivo", sans-serif;
    font-style: italic;
    font-size: 3rem;
    margin-bottom: 1%;
    @media @tablet {
      width: 85%;
      text-align: center;
      margin-bottom: 2%;
      font-size: 2rem;
    }
  }
  .arrow {
    // position: absolute;
    // top: 80%;
    // left: 50%;
    margin-bottom: 3%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    span {
      display: block;
      width: 30px;
      height: 30px;
      border-bottom: 5px solid @complementary;
      border-right: 5px solid @complementary;
      -webkit-transform: rotate(45deg);
      transform: rotate(45deg);
      margin: -10px;
      animation: animate 2s infinite;
    }
    span:nth-child(2) {
      animation-delay: -0.2s;
    }
    span:nth-child(3) {
      animation-delay: -0.4s;
    }
  }
  .navigation {
    width: 60%;
    height: 5%;
    display: flex;
    // justify-self: flex-end;
    margin-bottom: 1%;
    margin-top: 2%;
    @media @phone {
      display: none;
    }

    .nav-home {
      margin: 0 2%;
      width: 20%;
      border: 1px solid rgb(246, 248, 246);
      border-radius: 10px;
      font-size: 2rem;
      text-align: center;
      display: flex;
      align-items: center;
      justify-content: center;
      text-decoration: none;
      transition-duration: 300ms;
      color: rgb(246, 248, 246);
      &:hover {
        border: 1px solid @complementary;
        background: @complementary;
      }
    }
  }
}

